--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,12 @@ dependencies {
     // rxandroid
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.recyclerview:recyclerview:$androidx"
     implementation "com.google.android.material:material:$androidx"
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.1.0-alpha04'
     implementation 'com.android.support:appcompat-v7:28.0.0'
