--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,12 @@ android {
 }
 
 dependencies {
+
+    //navigation
+    implementation "ru.terrakok.cicerone:cicerone:5.0.0"
+
     //DI
     implementation 'com.google.dagger:dagger:2.13'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
 
     //moxy
@@ -46,6 +47,7 @@ dependencies {
     implementation "com.google.android.material:material:$androidx"
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'androidx.core:core-ktx:1.1.0-alpha04'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
