--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
 
 dependencies {
 
+    // Firebase
+    implementation "com.google.firebase:firebase-core:16.0.8"
+    implementation 'com.google.firebase:firebase-auth:16.2.1'
+
     //navigation
     implementation "ru.terrakok.cicerone:cicerone:5.0.0"
 
@@ -57,3 +61,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
