--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.example.partycheckapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-feature
+        android:name="android.hardware.camera.any"
+        android:required="true" />
+    <uses-feature
+            android:name="android.hardware.camera.autofocus"
+            android:required="false" />
+
 
     <application
             android:allowBackup="true"
@@ -24,6 +32,12 @@
 
         <activity
                 android:name=".presentation.feature.main.activity.MainActivity"
+                android:windowSoftInputMode="adjustPan"
+                android:theme="@style/AppTheme">
+        </activity>
+
+        <activity
+                android:name=".presentation.feature.party.addparty.AddPartyActivity"
                 android:theme="@style/AppTheme">
         </activity>
 
@@ -33,7 +47,7 @@
 
         <meta-data
                 android:name="io.fabric.ApiKey"
-                android:value="AIzaSyDas4X_jF8xiyzMKg1We5QB0O6Rlc9dMDM" />
+                android:value="AIzaSyDas4X_jF8xiyzMKg1We5QB0O6Rlc9dMDM"/>
     </application>
 
 </manifest>
