--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-feature
-        android:name="android.hardware.camera.any"
-        android:required="true" />
+            android:name="android.hardware.camera.any"
+            android:required="true"/>
     <uses-feature
             android:name="android.hardware.camera.autofocus"
-            android:required="false" />
+            android:required="false"/>
 
 
     <application
@@ -22,7 +22,7 @@
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
 
-        <activity android:name=".presentation.feature.auth.activity.LoginActivity">
+        <activity android:name=".presentation.feature.auth.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -38,6 +38,11 @@
 
         <activity
                 android:name=".presentation.feature.party.addparty.AddPartyActivity"
+                android:theme="@style/AppTheme">
+        </activity>
+
+        <activity
+                android:name=".presentation.feature.partydetails.PartyDetailsActivity"
                 android:theme="@style/AppTheme">
         </activity>
 
