--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
 
-        <activity android:name=".presentation.feature.auth.LoginActivity">
+        <activity
+                android:screenOrientation="portrait"
+                android:name=".presentation.feature.auth.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -31,18 +33,27 @@
         </activity>
 
         <activity
+                android:screenOrientation="portrait"
                 android:name=".presentation.feature.main.activity.MainActivity"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme">
         </activity>
 
         <activity
+                android:screenOrientation="portrait"
                 android:name=".presentation.feature.party.addparty.AddPartyActivity"
                 android:theme="@style/AppTheme">
         </activity>
 
         <activity
+                android:screenOrientation="portrait"
                 android:name=".presentation.feature.partydetails.PartyDetailsActivity"
+                android:theme="@style/AppTheme">
+        </activity>
+
+        <activity
+                android:screenOrientation="portrait"
+                android:name=".presentation.feature.debtorDetails.DebtorDetailsActivity"
                 android:theme="@style/AppTheme">
         </activity>
 
