--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
 
         <activity
                 android:screenOrientation="portrait"
-                android:name=".presentation.feature.debtorDetails.DebtorDetailsActivity"
+                android:name=".presentation.feature.debtordetails.DebtorDetailsActivity"
                 android:theme="@style/AppTheme">
         </activity>
 
