--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,5 +16,7 @@ jobs:
           java-version: 1.8
     - name: Run Unit tests
       run: bash ./gradlew test --stacktrace
+    - name: Run Lint tests
+      run: bash ./gradlew lint --stacktrace
     - name: build release 
       run: ./gradlew assembleRelease appDistributionUploadRelease
