--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,4 +19,20 @@ jobs:
     - name: Run Lint tests
       run: bash ./gradlew lint --stacktrace
     - name: build release 
-      run: ./gradlew assembleRelease appDistributionUploadRelease
+      run: ./gradlew assembleRelease appDistributionUploadRelease\
+   
+   detekt:
+    
+    name: Run Detekt Checkstyle
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
+      - name: Detekt Checkstyle
+        run: ./gradlew detekt
